--- a/public/global.css
+++ b/public/global.css
@@ -57,3 +57,12 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
