--- a/public/global.css
+++ b/public/global.css
@@ -44,10 +44,12 @@ button {
 	color: #333;
 	background-color: #f4f4f4;
 	outline: none;
+	cursor: pointer;
 }
 
 button:disabled {
 	color: #999;
+	cursor: not-allowed;
 }
 
 button:not(:disabled):active {
@@ -56,13 +58,4 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
-}
-
-.unselectable {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 }
